flux/production/networking.k8s.io-v1-Ingress-monitoring-kube-prometheus-stack-alertmanager.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress-nginx/client-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
  labels:
    app: kube-prometheus-stack-alertmanager
    app.kubernetes.io/instance: kube-prometheus-stack
  name: kube-prometheus-stack-alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.spack.io
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - alertmanager.spack.io
    secretName: tls-alertmanager-webservice
